<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jshaak.armadacombatlog.EntryFormActivity">

    <ToggleButton
        android:id="@+id/tgbPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:checked="true"
        android:textOff="@string/btn_imperial"
        android:textOn="@string/btn_rebel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ToggleButton
        android:id="@+id/tgbOpponent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:textOff="@string/btn_imperial"
        android:textOn="@string/btn_rebel"
        app:layout_constraintBaseline_toBaselineOf="@+id/tgbPlayer"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="34dp"
        android:layout_height="27dp"
        android:text="VS"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/tgbPlayer"
        app:layout_constraintLeft_toRightOf="@+id/tgbPlayer"
        app:layout_constraintRight_toLeftOf="@+id/tgbOpponent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="You"
        app:layout_constraintLeft_toLeftOf="@+id/tgbPlayer"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtOpponent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="Opponent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/tgbOpponent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="formSubmit"
        android:text="@string/btn_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/cbxWipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="Fleet wiped?"
        app:layout_constraintLeft_toRightOf="@+id/actvObjective"
        app:layout_constraintTop_toBottomOf="@+id/rgpOrder" />

    <EditText
        android:id="@+id/txtOpponent"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Opponent Name"
        android:inputType="textCapSentences"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tgbPlayer"
        android:id="@+id/rgpOrder"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioButton
            android:id="@+id/radFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/rad_first"
            tools:layout_editor_absoluteX="219dp"
            tools:layout_editor_absoluteY="314dp" />

        <RadioButton
            android:id="@+id/radSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/rad_second"
            android:textAlignment="textStart"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="314dp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnPoints"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:dropDownWidth="match_parent"
        android:entries="@array/points"
        android:prompt="@string/points_prompt"
        android:spinnerMode="dropdown"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/txtOpponent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtOpponent" />

    <AutoCompleteTextView
        android:id="@+id/actvObjective"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/txt_objhint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgpOrder"
        android:inputType="textCapSentences"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:onClick="showDatePickerDialog"
        android:text="Tap to set date"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="deleteEntry"
        android:text="@string/btn_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
